Added registration api for user
