# Api-Gateway/api/docs/swagger.json
@@ -131,6 +131,33 @@
                 }
             }
         },
+        "/v1/users/register": {
+            "post": {
+                "description": "This api is using for registering user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Register user summary",
+                "parameters": [
+                    {
+                        "description": "user_body",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.RegisterUserAuthReqBody"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/v1/users/update/{id}": {
             "put": {
                 "description": "This Api is using for updating user with posts",
@@ -171,6 +198,29 @@
                     }
                 }
             }
+        },
+        "/v1/users/verfication": {
+            "post": {
+                "description": "This api using for verifying registered user",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "parameters": [
+                    {
+                        "description": "user body",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.Emailver"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
         }
     },
     "definitions": {
@@ -191,6 +241,17 @@
                     "items": {
                         "$ref": "#/definitions/v1.Post"
                     }
+                }
+            }
+        },
+        "v1.Emailver": {
+            "type": "object",
+            "properties": {
+                "Code": {
+                    "type": "string"
+                },
+                "Email": {
+                    "type": "string"
                 }
             }
         },
@@ -227,6 +288,30 @@
                     "type": "string"
                 },
                 "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "v1.RegisterUserAuthReqBody": {
+            "type": "object",
+            "properties": {
+                "Code": {
+                    "type": "string"
+                },
+                "Email": {
+                    "type": "string"
+                },
+                "FirstName": {
+                    "description": "Id          string `protobuf:\"bytes,1,opt,name=Id,proto3\" json:\"Id\"`",
+                    "type": "string"
+                },
+                "Password": {
+                    "type": "string"
+                },
+                "PhoneNumber": {
+                    "type": "string"
+                },
+                "Username": {
                     "type": "string"
                 }
             }
